--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4; /* Light grey background for professionalism */
+            background-color: #f4f4f4; /* Light grey background for*/
             color: #333;
             display: flex;
             flex-direction: column;
@@ -18,21 +18,21 @@
 
         header {
             background: #2c3e50; /* Dark blue-grey background */
-            color: #ecf0f1; /* Light text color for contrast */
+            color: #ecf0f1; /* Light text color*/
             text-align: center;
             padding: 2rem 0;
             position: relative;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow for header */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /*Subtle shadow for header*/
         }
 
         header h1 {
             font-size: 2.5rem;
             margin: 0;
-            letter-spacing: 1px; /* Increased letter spacing for elegance */
+            letter-spacing: 1px; 
         }
 
         nav {
-            margin-top: 1rem; /* Adjusted margin */
+            margin-top: 1rem;
         }
 
         nav ul {
@@ -48,14 +48,14 @@
         }
 
         nav ul li a {
-            color: #ecf0f1; /* Light color for text */
+            color: #ecf0f1; /*Light color for text*/
             text-decoration: none;
             font-weight: bold;
             padding: 10px 20px;
             border-radius: 5px;
             transition: background 0.3s, transform 0.3s;
             display: inline-block;
-            background: #34495e; /* Tab background color */
+            background: #34495e; 
         }
 
         nav ul li a:hover {
