--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
     <main>
         <div id="about" class="tab">
             <h2>About Me</h2>
-            <p>I am a 21-year-old third-year student at Northwest University. I attended high school at DF Malan in Bellville and grew up in Welgemoed. I am a collaborative and communicative individual who excels under pressure and possesses strong problem-solving skills. 
-            My hobbies are playing games, listing and creating music, and drawing to develop creative skills.</p>
+            <p>I am a 21-year-old student at Northwest University. I attended high school at DF Malan in Bellville and grew up in Welgemoed. I am a collaborative and communicative individual who excels under pressure and possesses strong problem-solving skills. 
+            My hobbies are playing games, listing and creating music, drawing to develop creative skills, and playing golf(Social).</p>
             <p><a href="https://github.com/Andrew-le-Roux/Virtual-CV/raw/ecdbd1552e3d3c36287594311f8228575d7fef87/CV%20Resume.pdf" download>Download my CV</a></p>
         </div>
 
@@ -173,7 +173,7 @@
             </ul>
             <p>Bsc Information Technology</p>
             <ul>
-                <li>Currently studying IT at NWU. I am in my third year, expecting to graduate in 2024.</li>
+                <li>Currently studying IT at NWU. I am in my third year, expecting to graduate in 2025.</li>
             </ul>
 
             <p><strong>Work Experience:</strong></p>
@@ -199,15 +199,28 @@
             <ul>
                 <li>Designed an application that allows users to send and receive messages, establish connections using IP and ports, and create user groups.</li>
             </ul>
+            <p><strong>Share2Teach : Open Educational Resource Platform</strong></p>
+            <ul>
+                <li>As part of a collaborative team project, I contributed to the development of the Share2Teach platform, a web-based educational resource application designed to foster global learning accessibility. This project enhanced my technical and project management skills in the following ways:
+
+                    Frontend and Backend Development: Gained experience in implementing secure account creation, document upload functionality, metadata tagging, and analytics for user engagement tracking using modern web development frameworks.
+                    Database and Data Management: Worked with relational databases to ensure efficient storage, retrieval, and organization of user data and document metadata.
+                    Quality Assurance and Testing: Ensured the system's functionality through rigorous unit testing and implemented error-handling measures for a seamless user experience.
+                    Project Collaboration: Followed agile development practices using version control (GitHub) to collaborate with peers and meet project timelines effectively.
+                    Security Best Practices: Incorporated data encryption, secure authentication (OAuth2), and role-based access control to ensure system integrity.
+                    This hands-on experience solidified my ability to design and deliver scalable, user-centric software solutions.</li>
+            </ul>
         </div>
 
         <div id="skills" class="tab">
             <h2>Skills</h2>
             <ul>
-                <li>Proficient in programming languages (e.g., Python, Java).</li>
+                <li>Experience in programming languages (Python, Java).</li>
                 <li>Strong problem-solving and analytical skills.</li>
                 <li>Excellent communication and collaboration abilities.</li>
                 <li>Experience with web development (HTML, CSS, JavaScript).</li>
+                <li>Love hate relationship with Azure.</li>
+                <li>Worked with Supabase</li>
                 <li>Adaptability and willingness to learn new technologies.</li>
                 <li>Experience with piano, trumpet, tuba, but mostly saxophone.</li>
             </ul>
