--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <h2>About Me</h2>
             <p>I am a 21-year-old student at Northwest University. I attended high school at DF Malan in Bellville and grew up in Welgemoed. I am a collaborative and communicative individual who excels under pressure and possesses strong problem-solving skills. 
             My hobbies are playing games, listing and creating music, drawing to develop creative skills, and playing golf(Social).</p>
-            <p><a href="https://Andrew-le-Roux.github.io/Virtual-CV/CV_Resume.pdf" download>Download my CV</a></p>
+            <p><a href="https://github.com/Andrew-le-Roux/Virtual-CV/blob/bba85e136f63830dd815ebaacb70d800e7827542/CV_Resume.pdf" download>Download my CV</a></p>
         </div>
 
         <div id="resume" class="tab">
